--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <!-- No leading slash, but no ./ either - Vite will handle the path -->
-    <link rel="icon" type="image/svg+xml" href="vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Interactive N2 Chart</title>
 </head>
 <body>
     <div id="root"></div>
-    <!-- No leading slash for src path -->
-    <script type="module" src="src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
